# crypto-arb-scanner

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-vwap-depth-not-top-of-book.md  0002-gross-to-net-waterfall.md  0003-staleness-embargo-no-lookahead.md  0004-honest-null-no-feasible-edge.md  0005-synthetic-fallback-data-source.md
src/cryptoarb/: __init__.py  _exceptions.py  _manifest.py  _typing.py  _validation.py  cli.py  plots.py  scan.py
src/cryptoarb/arb/: __init__.py  cross.py  feasibility.py  triangular.py
src/cryptoarb/books/: __init__.py  model.py  synthetic.py  vwap.py
src/cryptoarb/costs/: __init__.py  _profiles.py  fees.py  transfer.py  waterfall.py
src/cryptoarb/data/: __init__.py  cache.py  ccxt_source.py
src/cryptoarb/evaluation/: __init__.py  dsr.py  netedge.py  verdict.py
src/cryptoarb/profiles/: default.yaml  high.yaml  low.yaml
tests/: conftest.py
tests/integration/: test_cli.py  test_integration_contracts.py
tests/parity/: test_arb_parity.py  test_parity_contracts.py
tests/property/: test_books_group.py  test_property_contracts.py
tests/regression/: __init__.py  test_regression_contracts.py
tests/unit/: test_costs.py  test_data_source.py  test_dsr.py  test_evaluation_group.py  test_infra.py  test_plots.py  test_smoke.py
