[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-arb-scanner"
version = "0.1.0"
description = "Decompose cross-exchange and triangular crypto spreads into a fee-, depth-, and transfer-cost-aware gross->net waterfall; the headline is the honest collapse of the executable edge, not a profit claim."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FatihHekim0glu" }]
keywords = [
    "crypto",
    "arbitrage",
    "market-microstructure",
    "order-book",
    "cross-exchange",
    "triangular-arbitrage",
    "quantitative-finance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "quantcore @ git+https://github.com/FatihHekim0glu/quantcore@v0.1.0",
]

[project.urls]
Homepage = "https://fatihhekimoglu.com"
Repository = "https://github.com/FatihHekim0glu/crypto-arb-scanner"
Changelog = "https://github.com/FatihHekim0glu/crypto-arb-scanner/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Live L2 order-book path (async ccxt) + analytics + parquet/diskcache cache.
# ccxt is imported LAZILY inside functions; nothing here runs at import time.
data = [
    "scipy>=1.11",
    "statsmodels>=0.14",
    "ccxt>=4",
    "pyarrow>=15.0",
    "diskcache>=5.6",
    "pyyaml>=6.0",
]
# Plotly figure builders (figures serialize to {data, layout} JSON).
viz = [
    "plotly>=5.20",
    "kaleido>=0.2.1",
]
# Developer + parity-oracle + lint/type/test stack.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
cryptoarb = "cryptoarb.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptoarb"]
# Bundle the reference fee/transfer profiles (read at runtime via importlib).
artifacts = ["src/cryptoarb/profiles/*.yaml"]

[tool.hatch.build.targets.sdist]
include = [
    "src/cryptoarb",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-vet
]
ignore = [
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]  # math-style names (Q, VWAP) in tests

[tool.ruff.lint.pep8-naming]
# Math-style single-capital names (notional Q) are intentional.
extend-ignore-names = ["Q", "VWAP", "A", "B", "C"]

# --------------------------------------------------------------------------- #
# mypy (strict)                                                               #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src/cryptoarb"]

# Documented pandas override: pandas-stubs is incomplete for some DataFrame
# operations; we accept untyped pandas internals at the boundary while keeping
# our own signatures strictly typed. (House convention: curated pandas suppression.)
[[tool.mypy.overrides]]
module = ["pandas.*"]
follow_imports = "skip"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "ccxt.*",
    "diskcache.*",
    "plotly.*",
    "typer.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast isolated unit tests",
    "property: Hypothesis property-based invariant tests",
    "parity: validation against an independent reference implementation",
    "regression: pinned-snapshot / locked-behaviour tests",
    "integration: end-to-end pipeline tests (may touch data/network)",
    "slow: long-running tests",
]

# --------------------------------------------------------------------------- #
# Coverage                                                                     #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
branch = true
source = ["cryptoarb"]
# The Typer CLI is a thin argument-parsing shell over run_scan and is exercised
# end to end by the integration suite, not the offline unit gate; exclude it from
# the core-logic coverage number.
omit = ["src/cryptoarb/cli.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
